--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,1 +1,9 @@
-//icons
+//color fonts
+$_light-black: #2D3033;
+$_black:#000000;
+$_white: #FFFFFF;
+$_grey: #6C7279;
+$_red: #FF4343;
+$_light-grey:#808080;
+$_white-grey: #BABBC5;
+$_dark_white: #C6CBCD;
