--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,50 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/
-v2.0 | 20110126
-License: none (public domain)
-*/
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
 *{
     margin: 0;
     padding: 0;
@@ -52,8 +5,53 @@ table {
     list-style: none;
     text-decoration: none;
 }
-@import "_cdn.scss";
-@import "_mixins.scss";
-@import "_variables.scss";
+@import '_cdn.scss';
+@import '_mixins.scss';
+@import '_variables.scss';
+@import 'style_header.scss';
+@import 'style_main.scss';
+@import 'style_icons.scss';
+@import 'style_project.scss';
+@import 'style_founder.scss';
+@import 'style_ready.scss';
+@import 'style_about.scss';
+@import 'style_footer.scss';
+@import 'style_integer.scss';
 
-.fa-pen-to-square{font-size: 32rem;}
+html{
+    font-family: 'Cardo', serif;
+    font-family: 'Raleway', sans-serif;
+}
+a{cursor: pointer;}
+.countainer{
+    max-width: 1170px;
+    margin: 0 auto;
+    padding: 0 15px;
+    z-index: 23;
+}
+.wrap{
+    display: flex;
+    margin: 0 -15px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.bg-section{
+    background: url(../img/img.png);
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    &::before{
+        content: "";
+        width: 100%;
+        height: 100%;
+        background-color: #252B49;
+        opacity: 0.8;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+}
